[gd_scene load_steps=2 format=3 uid="uid://jodghgensrq1"]

[ext_resource type="Script" path="res://scenes/dash_board.gd" id="1_i3tp3"]

[node name="DashBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_i3tp3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectPlayer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="List" type="VBoxContainer" parent="HBoxContainer/SelectPlayer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="SelectPlayerTitle" type="Label" parent="HBoxContainer/SelectPlayer/List"]
layout_mode = 2
size_flags_vertical = 6
text = "Top 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollPlayerList" type="ScrollContainer" parent="HBoxContainer/SelectPlayer/List"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="HBoxContainer/SelectPlayer/List/ScrollPlayerList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -93.0
offset_right = -125.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
text = "EXIT"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
